# ewoksppf

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release.yml  test.yml
doc/: actors.rst  api.rst  conf.py  explanations.rst  howtoguides.rst  index.rst  parallel.rst  reference.rst  tutorials.rst
doc/explanations/: actors.rst
doc/howtoguides/: index.rst  parallel.rst
doc/reference/: actors.rst  index.rst
doc/tutorials/: getting_started.rst  index.rst
ewoksppf/: __init__.py  bindings.py  ppfrunscript.py
ewoksppf/tests/: test_examples.py  test_ppf_end.py  test_ppf_job.py  test_ppf_workflow1.py  test_ppf_workflow10.py  test_ppf_workflow11.py  test_ppf_workflow12.py  test_ppf_workflow13.py  test_ppf_workflow14.py  test_ppf_workflow15.py  test_ppf_workflow16.py  test_ppf_workflow18.py  test_ppf_workflow19.py  test_ppf_workflow2.py  test_ppf_workflow20.py  test_ppf_workflow21.py  test_ppf_workflow24.py  test_ppf_workflow3.py  test_ppf_workflow6.py  test_ppf_workflow7.py  test_ppf_workflow8.py  test_ppf_workflow9.py
ewoksppf/tests/test_ppf_actors/: pythonActorAddB.py
scripts/: mapreduce_workflow.py
src/ewoksppf/: bindings.py  ppfrunscript.py
src/ewoksppf/tests/: test_examples.py  test_input_merge_actor.py  test_ppf_workflow21.py  test_ppf_workflow25.py  test_ppf_workflow26.py  test_self_triggering_task.py  test_workflow_events.py
src/ewoksppf/tests/test_ppf_actors/: pythonActorSelfLoop.py
