[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewoksppf"
version = "2.0.1"
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Pypushflow binding for Ewoks"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ewokscore >=4.0.1",
    "pypushflow >=1.1.0"
]

[project.urls]
Homepage = "https://github.com/ewoks-kit/ewoksppf/"
Documentation = "https://ewoksppf.readthedocs.io/"
Repository = "https://github.com/ewoks-kit/ewoksppf/"
Issues = "https://github.com/ewoks-kit/ewoksppf/issues"
Changelog = "https://github.com/ewoks-kit/ewoksppf/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest >=7",
]
dev = [
    "ewoksppf[test]",
    "black >=25",
    "flake8 >=4",
]
doc = [
    "ewoksppf[test]",
    "sphinx >=4.5",
    "sphinxcontrib-mermaid >=0.7",
    "sphinx-autodoc-typehints >=1.16",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ['*/tests/*']

[project.entry-points."ewoks.engines"]
"ppf" = "ewoksppf.engine:PpfWorkflowEngine"

[tool.isort]
profile = "black"
force_single_line = "True"
