[metadata]
name = ewoksppf
version = attr: ewoksppf.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = Pypushflow binding for Ewoks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoksppf
project_urls = 
    Bug Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoksppf/-/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewokscore @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewokscore.git@main
    pypushflow @ git+https://git@gitlab.esrf.fr/workflow/pypushflow.git@main

[options.extras_require]
dev = 
    black
    flake8
    pytest
test = 
    pytest

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
